# html-pptx-template

./: .gitignore  pyproject.toml  requirements.txt  skill.yaml
docs/: PLAN-next-phase.md  references.md
docs/superpowers/plans/: 2026-05-14-html-pptx-template-implementation.md
docs/superpowers/specs/: 2026-05-14-html-pptx-template-design.md
src/html_pptx_template/: cli.py
src/html_pptx_template/extractor/: __init__.py  browser.py  css_parser.py  screenshot.py  style_analyzer.py
src/html_pptx_template/generator/: __init__.py  engine.py  layout_parser.py  slide_builder.py  theme_applier.py
src/html_pptx_template/templates/: __init__.py  index.py  manager.py  schema.py  visual_analyzer.py
src/html_pptx_template/utils/: __init__.py  color.py  validators.py
tests/: conftest.py  test_cli.py  test_integration.py
tests/test_extractor/: test_browser.py  test_css_parser.py  test_screenshot.py  test_style_analyzer.py
tests/test_generator/: test_engine.py  test_layout_parser.py  test_slide_builder.py  test_theme_applier.py
tests/test_templates/: test_index.py  test_manager.py  test_schema.py  test_visual_analyzer.py
tests/test_utils/: test_color.py  test_validators.py
